[metadata]
name = pyst2
version = attr: asterisk.__version__
description = Python bindings for Asterisk AGI/AMI interfaces
url = https://github.com/jfernandz/pyst2
author = Randall Degges
email = r@rdegges.com
maintainer = VCTLabs, Inc.
maintainer_email = answers@vctlabs.com
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_expression = LGPL-2.1-or-later
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    Environment :: Other Environment
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Topic :: Communications :: Internet Phone
    Topic :: Communications :: Telephony
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    AGI
    AMI
    Asterisk
    telephony

[options]
python_requires = >= 3.6
install_requires =
    six>=1.9.0

packages = find:
zip_safe = False

[options.packages.find]
exclude =
    docs*
    examples*
    tests*

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    covdefaults
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
#ignore = E722, B001,
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests,

max-line-length = 94
